<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.dengot</groupId>
	<artifactId>steam-community-client</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Steam Community Client</name>

	<properties>
		<resource.encoding>UTF-8</resource.encoding>
		<java.version>1.6</java.version>
		<org.slf4j.version>1.5.10</org.slf4j.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<inherited>true</inherited>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jvnet.jaxb2.maven2</groupId>
				<artifactId>maven-jaxb2-plugin</artifactId>
				<version>0.7.3</version>
				<configuration>
					<extension>true</extension>
					<args>
						<arg>-Xfluent-api</arg>
					</args>
					<schemaDirectory>src/main/resources/META-INF/schema</schemaDirectory>
					<!--  <generateDirectory>src/main/generated</generateDirectory>  -->
					<plugins>
						<plugin>
							<groupId>net.java.dev.jaxb2-commons</groupId>
							<artifactId>jaxb-fluent-api</artifactId>
							<version>2.1.8</version>
						</plugin>
					</plugins>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<configuration>
						<stagingDirectory>${basedir}/site</stagingDirectory>
						<inputEncoding>${resource.encoding}</inputEncoding>
						<outputEncoding>${resource.encoding}</outputEncoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<inherited>true</inherited>
					<configuration>
						<showDeprecation>true</showDeprecation>
						<showWarnings>true</showWarnings>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<encoding>${resource.encoding}</encoding>
						<optimize>true</optimize>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.3</version>
					<configuration>
						<encoding>${resource.encoding}</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<disableXmlReport>false</disableXmlReport>
						<argLine>-Xmx768m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${org.slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${org.slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-ext</artifactId>
			<version>${org.slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>0.9.18</version>
		</dependency>

		<!-- xml binding -->
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.1.12</version>
		</dependency>

		<!-- testing -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.1.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>